--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "symfony/process": "2.2.*@dev"
+        "symfony/process": ">=2.1.0"
     },
     "autoload": {
         "psr-0": { "HGG\\DbBackup\\": "src/" }
